--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
       <h2>YAY! 🎉</h2>
       <img
         class="fireworks"
-        src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
-        alt="Fireworks"
+        src="https://media.tenor.com/6pXzqX9kZ0YAAAAC/dudu-bubu-love.gif"
+        alt="Dudu Bubu Love"
       />
     </section>
   </main>
