--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <h2>YAY! 🎉</h2>
       <img
         class="fireworks"
-        src="https://media.tenor.com/6pXzqX9kZ0YAAAAC/dudu-bubu-love.gif"
+        src="https://media.giphy.com/media/l0HlRnAWXxn0MhKLK/giphy.gif"
         alt="Dudu Bubu Love"
       />
     </section>
