--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <h2>YAY! 🎉</h2>
       <img
         class="fireworks"
-        src="https://media.giphy.com/media/l0HlRnAWXxn0MhKLK/giphy.gif"
+        src="https://tenor.com/i9OZQc9tBKy.gif"
         alt="Dudu Bubu Love"
       />
     </section>
