--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <h2>YAY! 🎉</h2>
       <img
         class="fireworks"
-        src="https://tenor.com/i9OZQc9tBKy.gif"
+        src="https://share.google/YCq2slr4reKS0Ymv1"
         alt="Dudu Bubu Love"
       />
     </section>
