--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <h2>YAY! 🎉</h2>
       <img
         class="fireworks"
-        src="https://share.google/YCq2slr4reKS0Ymv1"
+        src="https://media.tenor.com/aMOxt0o16TQAAAAm/bubu-bubu-dudu.webp"
         alt="Dudu Bubu Love"
       />
     </section>
